--- a/_data/education.yml
+++ b/_data/education.yml
@@ -2,5 +2,5 @@
 - degree: Full Stack Webdeveloper Nanodegree  
   uni: Udacity
   year: June, 2014 &mdash; January, 2015
-  # awards:
-  # summary:
+  awards: Student of the year
+  summary: Committed person towards his responsibility.
